hphp/hack/test/typecheck/ffp/yield_bad2.php.exp
File "yield_bad2.php", line 5, characters 8-9:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "yield_bad2.php", line 5, characters 13-19:
`yield` can only appear as a statement or on the right of an assignment (Parsing[1002])
File "yield_bad2.php", line 5, characters 13-19:
Invalid `yield` (Typing[4110])
File "yield_bad2.php", line 4, characters 18-21:
Expected `void`
File "yield_bad2.php", line 5, characters 13-19:
But got `Generator<int, int, [unresolved]>` (result of function with `yield` in the body)
